加入报名的modelnamed “applicants”， 其中改了migrate两次，改了table的名称以及column名称

--- a/views/admin.haml
+++ b/views/admin.haml
@@ -1,8 +1,8 @@
 %form(action="/" method="POST")
   %label(for="post")
-  %input(type="text" name="title")
-  %input(type="text" name="content")
-  %input(type="text" name="pic")
-  %input(type="text" name="video")
-  %input(type="text" name="cats_id")
+  %input(type="text" name="title") Title
+  %input(type="text" name="content") Content
+  %input(type="text" name="pic") Images
+  %input(type="text" name="video") Video
+  %input(type="text" name="cats_id") Catorgry
   %input(type="submit" value="提交")
