--- a/views/index.erb
+++ b/views/index.erb
@@ -1,25 +1,25 @@
-<div class="news" style="background-color:red">
-<ul>
-	<% @postnew.each do |pn| %>
-		<li><a href="/post/<%= pn.id %>"><%= pn.title %></a></li>
-	<% end %>
-</ul>
-</div>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>希望之星2012英语风采大赛</title>
+<style type="text/css">
+<!--
+body {
+margin:0; }
+#main {
+	width: 980px;
+	margin-top: 0px;
+	margin-right: auto;
+	margin-bottom: 0px;
+	margin-left: auto;
+}
+-->
+</style>
+</head>
 
-<div class="pic" style="background-color:green">
-<ul>
-	<% @postpic.each do |pp| %>
-		<li><a href="/post/<%= pp.id %>"><%= pp.title %></a></li>
-		<img src="<%= pp.pic %>">
-	<% end %>
-</ul>
-</div>
-
-<div class="video" style="background-color:bule">
-<ul>
-	<% @postvideo.each do |pv| %>
-		<li><a href="/post/<%= pv.id %>"><%= pv.title %></a><%= pv.video %></li>
-		
-	<% end %>
-</ul>
-</div>
+<body>
+<div id="main"><img src="./img/btn_toindex.jpg" width="980" height="652" border="0" usemap="#Map" />
+<map name="Map" id="Map"><area shape="rect" coords="398,439,584,480" href="/apply" /></map></div>
+</body>
+</html>
