修改报名页面，添加column

--- a/views/apply.erb
+++ b/views/apply.erb
@@ -135,7 +135,7 @@ body { margin:0; }
                                 <tr>
                                     <td><span class="STYLE4">身份证：</span></td>
                                     <td><span class="STYLE4">
-                                    <input name="IDCard" type="text" id="" class="">
+                                    <input name="idcard" type="text" id="" class="">
                                     <span style="color: red">*</span></span></td>
                                 </tr>
                                 <tr>
@@ -152,7 +152,7 @@ body { margin:0; }
                                 <tr>
                                     <td><span class="STYLE4">出生年月：</span></td>
                                     <td> <span class="STYLE4">
-                                    <input name="Birthday" type="text" id="">
+                                    <input name="birth" type="text" id="">
                                     <span style="color:Red;">*</span></span></td>
                                 </tr>
                                 <tr>
@@ -175,12 +175,12 @@ body { margin:0; }
                                 <tr>
                                     <td><span class="STYLE4">联系地址：</span></td>
                                     <td><span class="STYLE4">
-                                    <input name="Address" type="text" id="">
+                                    <input name="address" type="text" id="">
                                     <span style="color: red">*</span></span></td>
                                 </tr>
                                 <tr>
                                     <td><span class="STYLE4">电话：</span></td>
-                                    <td><input name="Tel" type="text" id=""></td>
+                                    <td><input name="tel" type="text" id=""></td>
                                 </tr>
                                 <tr>
                                     <td><span class="STYLE4">手机：</span></td>
@@ -191,7 +191,7 @@ body { margin:0; }
                                 <tr>
                                     <td><span class="STYLE4">家长姓名：</span></td>
                                     <td><span class="STYLE4">
-                                    <input name="RName" type="text" id="">
+                                    <input name="pname" type="text" id="">
                                     <span style="color: red">*</span></span></td>
                                 </tr>
                                 <tr>
